Envia modificações feitas na classe main e realiza alterações em classe afiliadas